apps/base/pocket-id/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pocket-id
  labels:
    allow-internal-gateway: "true"
    allow-external-gateway: "true"
