apps/base/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id-web
  namespace: pocket-id
spec:
  selector:
    app: pocket-id
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
